Add postinstall script

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "prerelease": "npm run build",
     "release": "release-it",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "postinstall": "npm run build"
   },
   "peerDependencies": {
     "react": ">=16.8.0",
